latest iOS code
latest iOS code

--- a/DataFile.Properties
+++ b/DataFile.Properties
@@ -1,5 +1,5 @@
 #Previous IP Address stotred
-#Thu Mar 02 18:59:08 IST 2023
+#Mon Apr 17 20:43:34 IST 2023
 NonUSLocationZip=560068
 USLocationZip=30328
 AppVersion=12.29(425131)
@@ -18,18 +18,18 @@ Old_Build=3000413
 prefetchOnInitEnabled=true
 platformVersion=9.3.1
 CriteoResponseCode=200
-IMASDKVersion=ima-ios.3.13.0
 CriteoBundleId=com.weather.TWC
+IMASDKVersion=ima-ios.3.13.0
 dataFilePath=/DataFile.Properties
-wifiName=TP-Link_46A2_5G
+wifiName=Airtel_5G
 platformName=iOS
 CriteoCpId=B-051673
 New_Build=3000413
 appVersion=0;
-CriteoSDKVersion=4.5.0
 appiumVersion=1.0
+CriteoSDKVersion=4.5.0
 remoteLogLevel=Warning
-current_IPAddress=192.168.0.133
+current_IPAddress=192.168.1.3
 ExcelFilePath_CustParam_Result=/ExcelFile/TWC_Cust_Param_Results.xls
-previous_IPAddress=192.168.0.133
+previous_IPAddress=192.168.1.3
 platform=Mac
