--- a/JenkinsEmailConfig.Properties
+++ b/JenkinsEmailConfig.Properties
@@ -1,8 +1,8 @@
-#App Version read from app and updated
-#Wed Apr 05 22:17:05 IST 2023
+# App Version read from app and updated
+#Tue May 16 21:28:14 IST 2023
 NonUSLocationZip=560068
 USLocationZip=30328
-AppVersion=12.39 (3001659)
+AppVersion=10.64.1 1064010109 (4396a67dbd debug)
 csmEnabled=true
 ExcelFilePath=/ExcelFile/TWC_Framework.xls
 GMASDKVersion=afma-sdk-i-v9.9.0
