--- a/DataFile.Properties
+++ b/DataFile.Properties
@@ -1,5 +1,5 @@
 #Previous IP Address stotred
-#Mon Apr 17 20:43:34 IST 2023
+#Fri Apr 14 20:12:58 IST 2023
 NonUSLocationZip=560068
 USLocationZip=30328
 AppVersion=12.29(425131)
@@ -18,18 +18,18 @@ Old_Build=3000413
 prefetchOnInitEnabled=true
 platformVersion=9.3.1
 CriteoResponseCode=200
-CriteoBundleId=com.weather.TWC
 IMASDKVersion=ima-ios.3.13.0
+CriteoBundleId=com.weather.TWC
 dataFilePath=/DataFile.Properties
-wifiName=Airtel_5G
+wifiName=TP-Link_46A2_5G
 platformName=iOS
 CriteoCpId=B-051673
 New_Build=3000413
 appVersion=0;
-appiumVersion=1.0
 CriteoSDKVersion=4.5.0
+appiumVersion=1.0
 remoteLogLevel=Warning
-current_IPAddress=192.168.1.3
+current_IPAddress=192.168.0.133
 ExcelFilePath_CustParam_Result=/ExcelFile/TWC_Cust_Param_Results.xls
-previous_IPAddress=192.168.1.3
+previous_IPAddress=192.168.0.133
 platform=Mac
